--- a/Client/.classpath
+++ b/Client/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="/home/esagardia/Documents/3A/sogifty/jackson-all-1.9.0.jar"/>
-	<classpathentry kind="lib" path="/home/esagardia/Documents/3A/sogifty/ksoap2-android-assembly-2.5.8-jar-with-dependencies.jar"/>
-	<classpathentry kind="lib" path="/home/esagardia/Documents/3A/sogifty/urlimageviewhelper-1.0.4.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/jackson-all-1.9.0.jar"/>
+	<classpathentry kind="lib" path="libs/ksoap2-android-assembly-2.5.8-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="libs/urlimageviewhelper-1.0.4.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/devellopement/adt-bundle-windows-x86_64-20140702/sdk/platforms/android-20/android.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
