--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -24,9 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.sogifty.activities.HelloAndroidActivity" />
+        <activity android:name="com.sogifty.activities.FriendListActivity" />
          
-        <activity android:name="com.sogifty.activities.FriendDetailActivity" />
+        <activity android:name="com.sogifty.activities.FriendDetailModificationActivity" />
             
        
             
