Renommage d'un user en friend pour correspondance avec serveur

--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name="com.sogifty.activities.FriendListActivity" />
          
         <activity android:name="com.sogifty.activities.FriendDetailModificationActivity" />
+        <activity android:name="com.sogifty.activities.FriendDetailsActivity" />
             
        
             
