--- a/Sogifty/pom.xml
+++ b/Sogifty/pom.xml
@@ -69,6 +69,13 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.3-1102-jdbc41</version>
 		</dependency>
+		
+		<!--  Message body reader for Json -->
+		<dependency>
+	       <groupId>org.jboss.resteasy</groupId>
+	       <artifactId>resteasy-jackson-provider</artifactId>
+	       <version>2.3.2.Final</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
