--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
     
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />	
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    
 
     <application
         android:allowBackup="true"
