Ajout de l'inscription avec communication serveur + listener pour gestion tasks + ajout libs depots

--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name="com.sogifty.activities.FriendDetailModificationActivity" />
         <activity android:name="com.sogifty.activities.FriendDetailsActivity" />
         <activity android:name="com.sogifty.activities.ConnectionActivity" />
+        <activity android:name="com.sogifty.activities.SubscriptionActivity" />
             
        
             
