--- a/Sogifty/pom.xml
+++ b/Sogifty/pom.xml
@@ -24,6 +24,14 @@
 	</repositories>
 
 	<dependencies>
+
+		<!-- Joda time -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.5</version>
+		</dependency>
+
 		<!-- Resteasy -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
@@ -76,14 +84,14 @@
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<version>2.3.2.Final</version>
 		</dependency>
-		
+
 		<!-- Log4J -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-		
+
 		<!-- Jsoup -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
