--- a/Sogifty/src/main/webapp/WEB-INF/web.xml
+++ b/Sogifty/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,10 @@
 		<listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
 	</listener>
 
+	<listener>
+		<listener-class>com.sogifty.service.InitServer</listener-class>
+	</listener>
+	
 	<servlet>
 		<servlet-name>Resteasy</servlet-name>
 		<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
