--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -2,25 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sogifty"
     android:versionCode="1"
-    android:versionName="1.0" 
-    >
-    
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
-    
-    <uses-permission android:name="android.permission.INTERNET" />	
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/sogifti_logo"
         android:label="@string/app_name"
-        android:theme="@style/MyTheme"
-        >
+        android:theme="@style/MyTheme" >
         <activity android:name="com.sogifty.activities.StartActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,15 +25,12 @@
             </intent-filter>
         </activity>
         <activity android:name="com.sogifty.activities.FriendListActivity" />
-         
         <activity android:name="com.sogifty.activities.FriendDetailModificationActivity" />
         <activity android:name="com.sogifty.activities.FriendDetailsActivity" />
         <activity android:name="com.sogifty.activities.ConnectionActivity" />
         <activity android:name="com.sogifty.activities.SubscriptionActivity" />
         <activity android:name="com.sogifty.activities.AddFriendActivity" />
-        
-       
-            
+
         <receiver android:name="com.sogifty.widget.WidgetProvider" >
             <intent-filter>
 
@@ -49,12 +42,12 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widgetinfo" />
         </receiver>
-
         <service
             android:name="com.sogifty.widget.WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
-	    
+
+        <service android:name="com.sogifty.services.NotificationService" />
+        
     </application>
-      
 
 </manifest>
