--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/sogifti_logo"
@@ -42,12 +44,18 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widgetinfo" />
         </receiver>
+
         <service
             android:name="com.sogifty.widget.WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
 
+        <receiver android:name="com.sogifty.activities.StartNotificationServiceFromBoot" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
         <service android:name="com.sogifty.services.NotificationService" />
-        
     </application>
 
 </manifest>
