--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name="com.sogifty.activities.ConnectionActivity" />
         <activity android:name="com.sogifty.activities.SubscriptionActivity" />
         <activity android:name="com.sogifty.activities.AddFriendActivity" />
-
+		 <activity android:name="com.sogifty.activities.ChooseAvatarActivity" />
+        
         <receiver android:name="com.sogifty.widget.WidgetProvider" >
             <intent-filter>
 
