léo il est trop fort : notif configuré=ok, notif pour plusieur anniversaire=ok, datePicker=ok, un peu de nétoyage de code=ok

--- a/Client/AndroidManifest.xml
+++ b/Client/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name="com.sogifty.activities.SubscriptionActivity" />
         <activity android:name="com.sogifty.activities.AddFriendActivity" />
 		 <activity android:name="com.sogifty.activities.ChooseAvatarActivity" />
+        <activity android:name="com.sogifty.activities.ConfigActivity" />
         
         <receiver android:name="com.sogifty.widget.WidgetProvider" >
             <intent-filter>
